# gyro-nicert

./: .editorconfig  .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
backend/: main.py
backtesting/: __init__.py  contracts.py  local_data_provider.py  run.py  teacher_engine.py
common/: __init__.py  time_utils.py
data_manager/: coverage_service.py  database.py  download_service.py  market_repository.py  rqdata_client.py
frontend/: index.html  package-lock.json  package.json
natural_language/: 20日布林带14日RSI.txt  512100_60分钟EMA趋势回踩.txt  512100_日线RSI2超跌反弹.txt  512100_日线防守型双均线ATR.txt  60min MA(10) Crossover.txt  cbond_regime_breakout.txt  cbond_slow_trend.txt  cbond_slow_trend_v2.txt  cbond_trend_pullback.txt  connors_rsi2_shortterm.txt  example copy.txt  example.txt  example1.txt  example2.txt  fair_value_gap_orderblock.txt  ma_macd_rsi.txt  my_example.txt  opening_range_breakout_intraday.txt  simple_test_strategy.txt  test2.txt  turtle_trading_classic.txt  两仪四象量化策略_red.txt  动量.txt  布林带.txt  择时内置策略研究_red.txt  挤压释放动量.txt  母线压缩放量突破.txt  混沌指数双状态.txt  线性回归斜率量化策略_red.txt
scripts/: init_db.py
strategy_generation/: __init__.py  generation.py  providers.py  repair.py  validation.py
strategy_optimization/: __init__.py  contracts.py  legacy_parameter_optimizer.py  optimize.py  parameter_policy.py  search_space.py
tests/: test_ai_search_space.py  test_api_layer.py  test_api_strategy_generator.py  test_backtesting_boundary.py  test_data_api.py  test_data_manager.py  test_drawdown_metrics.py  test_natural_language_sources_api.py  test_pool_add_rerun.py  (+25 more)
(+118 files in other folders)
