[project]
name = "gyro-nicert"
version = "0.1.0"
description = "Quant Research Workbench foundation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.139.0",
  "uvicorn>=0.50.0",
  "httpx>=0.28.0",
  "numpy>=1.26.0",
  "optuna>=4.0.0,<5.0.0",
  "pandas>=2.0.0",
  "plotly>=5.0.0",
  "vnpy>=4.0.0,<5.0.0",
  "vnpy_ctastrategy>=1.3.0,<2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
